# knowledge2-python-sdk

./: AGENTS.md  CHANGELOG.md  README.md  __init__.py  _base.py  _logging.py  client.py  errors.py  pyproject.toml
examples/: batch_operations.py  document_upload.py  e2e_lifecycle.py  error_handling.py  pagination.py  quickstart.py  search.py
integrations/: __init__.py  _client.py
integrations/langchain/: __init__.py  retriever.py  tools.py
integrations/llamaindex/: __init__.py  filters.py  retriever.py  tools.py  vector_store.py
resources/: __init__.py  _mixin_base.py  a2a.py  audit.py  auth.py  console.py  corpora.py  deployments.py  documents.py  indexes.py  jobs.py  metadata.py  models.py  onboarding.py  orgs.py  projects.py  search.py  training.py  usage.py
types/: __init__.py  a2a.py  audit.py  auth.py  chunks.py  common.py  console.py  corpora.py  deployments.py  documents.py  embeddings.py  evaluation.py  feedback.py  indexes.py  jobs.py  models.py  onboarding.py  orgs.py  projects.py  search.py  training.py  usage.py
