[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge2"
version = "0.1.0"
description = "Python SDK for the Knowledge2 retrieval platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Knowledge2", email = "contact@knowledge2.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://knowledge2.ai"
Documentation = "https://knowledge2.ai/docs"
Repository = "https://github.com/posterity-ventures/k2_mvp"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk", "sdk.*"]

[tool.setuptools.package-data]
sdk = ["py.typed", "examples/*.py"]
